package com.upm.master.mastermind.controller;

import com.upm.master.mastermind.model.State;

public interface ResumeController extends Controller {
   void resume();
   void stop();
}
